# misc-projects

./: README.md  crud-cheatsheet.md  rebuild-icon-cache.cmd
batch-scripts/: network-reset.cmd  rebuild-icon-cache.cmd  win11-set-doh.cmd
crud-api-checkpoint/: build.gradle  docker-compose.yml
crud-api-checkpoint/src/main/java/checkpoint/: AuthenticatedUser.java  (+3 more)
crud-api-checkpoint/src/main/resources/: application.properties
crud-api-checkpoint/src/test/resources/: application.properties
fullstack-assessment/client/: index.html  package.json  tsconfig.json
fullstack-assessment/client/src/: App.tsx
fullstack-assessment/client/src/components/: BookCreator.tsx  BookDisplay.tsx  BooksDisplay.tsx
fullstack-assessment/server/: docker-compose.yml  init.sql  settings.gradle
jeopardy/: package-lock.json
jeopardy/src/: styles.css
jeopardy/src/components/: App.jsx  Categories.jsx  Category.jsx  Clue.jsx  Gameboard.jsx  Response.jsx
python-scripts/: pyproject.toml
python-scripts/scripts/: anki_to_mochi.py  organize_videos.py  x265.py
spring-template/: build.gradle  docker-compose.yml
spring-template/src/main/resources/: application.properties
spring-template/src/test/resources/: application.properties
todo-list/client/: .eslintrc.cjs  package.json  pnpm-lock.yaml
todo-list/client/src/: App.tsx  main.tsx
todo-list/client/src/components/: ItemCreator.tsx  ItemDisplay.tsx  ItemList.tsx
todo-list/server/: .gitignore  build.gradle  docker-compose.yml
vite-react-ts-template/: package.json  tsconfig.json
vite-react-ts-template/src/: App.tsx  main.tsx
(+28 files in other folders)
