[project]
name = "scripts"
version = "0.1.0"
authors = [
    { name = "Adam Langbert", email = "adamhl@pm.me" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "ruff>=0.0.278",
]

[tool.rye.scripts]
"lint:pyright" = "pyright scripts"
"lint:ruff" = "ruff check scripts"
lint = { chain = ["lint:pyright", "lint:ruff"] }
format = "black scripts"

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "BLE", "FBT", "B", "A", "COM", "C4", "T10", "EM", "EXE", "ISC", "ICN", "G",
"INP", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL", "PLC", "PLE",
"PLR", "PLW", "TRY", "RUF"]
ignore = ["E501", "INP001"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
